--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                     Escuela Profesional de Ciencia de la Computación</a> en la <a href="https://ucsp.edu.pe/" target="_blank">
                     Universidad Católica San Pablo</a>. Estoy en una etapa de descubrimiento personal 
                     y profesional, aprendiendo cada día un poco más sobre quién soy y en quién me puedo convertir...</p>
-                <a href="https://www.canva.com/design/DAGp0Kz9Qw0/3bEK58PgTkypIengbc2UDQ/view?utm_content=DAGp0Kz9Qw0&utm_
-                        campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=ha1a0e9b8ac" target="_blank"
+                <a href="" target="_blank"
                         class="btn"> Más de mí</a>
  
             </div>
