--- a/index.html
+++ b/index.html
@@ -117,8 +117,54 @@
 
         </section>
 
-        <section class="cursos" id="cursos">
-            <h2 class="heading">Cursos</h2>
+        <section class="courses" id="courses">
+            <h2 class="heading">Courses</h2>
+            <div class="courses-box">
+                <div class="courses-card">
+                    <h2>Apreciación Musical </h2>
+                    <p>Augusto Vera Béjar</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Gerardo Daniel Henry Gutierrez Celis</p>
+                    <p>Julio Eduardo Pino Charun</p>
+                </div>
+                <div class="courses-card">
+                    <h2>Estructuras Discretas II</h2>
+                    <p>Luis Díaz Basurco</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Rodrigo Andre Velasquez Bonilla</p>
+                    <p>Edmundo Fransua Nuñez Choque</p>
+                </div>
+                <div class="courses-card">
+                    <h2>Introducción a la Filosofía </h2>
+                    <p>Henry Huamán Navarro</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Daniel Eduardo Castillo Mayta</p>
+                    <p>Alisson Paola Salinas Alvarez</p>
+                </div>
+                <div class="courses-card">
+                    <h2>Introducción de Ciencia de la Computación</h2>
+                    <p>Ernesto Cuadros Vargas</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Dhaymar Christian Aroni Mamani</p>
+                    <p>Carlos Wiliam Uracahua Valenzuela</p>
+                </div>
+                <div class="courses-card">
+                    <h2>Matemática II</h2>
+                    <p>Yanet Chirinos Avilés</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Anthony Francisco Avilés Fuentes</p>
+                    <p>Julio Eduardo Pino Charun</p>
+                </div>
+                <div class="courses-card">
+                    <h2>Programación de Videojuegos</h2>
+                    <p>Julissa Villanueva Llerena</p>
+                    <h3>Compañeros destacados</h3>
+                    <p>Rodrigo Andre Velasquez Bonilla</p>
+                    <p>Daniel Eduardo Castillo Mayta</p>
+                </div>
+            </div>
+        </section>
+
 
         </section>
 
