--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
                 <a href="#education">Education</a>
-                <a href="#cursos">Cursos</a>
+                <a href="#courses">Courses</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </nav>
