--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>Augusto Vera Béjar</p>
                     <h3>Compañeros destacados</h3>
                     <p>Gerardo Daniel Henry Gutierrez Celis</p>
-                    <p>Julio Eduardo Pino Charun</p>
+                    <p><a href="https://julioiluj.github.io/githubpageJulioEduardoPinoCharun/" target="_blank">Julio Eduardo Pino Charun</a></p>
                 </div>
                 <div class="courses-card">
                     <h2>Estructuras Discretas II</h2>
@@ -152,7 +152,7 @@
                     <p>Yanet Chirinos Avilés</p>
                     <h3>Compañeros destacados</h3>
                     <p>Anthony Francisco Avilés Fuentes</p>
-                    <p>Julio Eduardo Pino Charun</p>
+                    <p><a href="https://julioiluj.github.io/githubpageJulioEduardoPinoCharun/" target="_blank">Julio Eduardo Pino Charun</a></p>
                 </div>
                 <div class="courses-card">
                     <h2>Programación de Videojuegos</h2>
