--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h2>Estructuras Discretas II</h2>
                     <p>Luis Díaz Basurco</p>
                     <h3>Compañeros destacados</h3>
-                    <p>Rodrigo Andre Velasquez Bonilla</p>
+                    <p><a href="https://rodrigovelasquezb.github.io/Rodrigo-Velasquez-Bonilla/" target="_blank">Rodrigo Andre Velasquez Bonilla</a></p>
                     <p>Edmundo Fransua Nuñez Choque</p>
                 </div>
                 <div class="courses-card">
@@ -138,7 +138,7 @@
                     <p>Henry Huamán Navarro</p>
                     <h3>Compañeros destacados</h3>
                     <p>Daniel Eduardo Castillo Mayta</p>
-                    <p>Alisson Paola Salinas Alvarez</p>
+                    <p><a href="https://alissonsalinasalvarez.github.io/" target="_blank"> Alisson Paola Salinas Alvarez</a></p>
                 </div>
                 <div class="courses-card">
                     <h2>Introducción de Ciencia de la Computación</h2>
@@ -158,7 +158,7 @@
                     <h2>Programación de Videojuegos</h2>
                     <p>Julissa Villanueva Llerena</p>
                     <h3>Compañeros destacados</h3>
-                    <p>Rodrigo Andre Velasquez Bonilla</p>
+                    <p><a href="https://rodrigovelasquezb.github.io/Rodrigo-Velasquez-Bonilla/" target="_blank">Rodrigo Andre Velasquez Bonilla</a></p>
                     <p>Daniel Eduardo Castillo Mayta</p>
                 </div>
             </div>
