--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h2>Apreciación Musical </h2>
                     <p>Augusto Vera Béjar</p>
                     <h3>Compañeros destacados</h3>
-                    <p>Gerardo Daniel Henry Gutierrez Celis</p>
+                    <p><a href="gerardogutierrezcelis.github.io/GerardoDanielHenryGutierrezCelis" target="_blank">Gerardo Daniel Henry Gutierrez Celis</a></p>
                     <p><a href="https://julioiluj.github.io/githubpageJulioEduardoPinoCharun/" target="_blank">Julio Eduardo Pino Charun</a></p>
                 </div>
                 <div class="courses-card">
