--- a/index.html
+++ b/index.html
@@ -164,8 +164,16 @@
             </div>
         </section>
 
-
-        </section>
-
+        <footer class="footer">
+            <div class="social">
+                <a href="https://github.com/Xhyl3m" target="_blank">
+                <i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/melani-chacnama-mendoza-497026310/" target="_blank">
+                <i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.instagram.com/melx_.31/" target="_blank">
+                <i class="bx bxl-instagram-alt"></i></a>
+            </div>
+        </footer>
+        
     </body>
 </html>
