--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h2>Apreciación Musical </h2>
                     <p>Augusto Vera Béjar</p>
                     <h3>Compañeros destacados</h3>
-                    <p><a href="gerardogutierrezcelis.github.io/GerardoDanielHenryGutierrezCelis" target="_blank">Gerardo Daniel Henry Gutierrez Celis</a></p>
+                    <p><a href="https://gerardogutierrezcelis.github.io/GerardoDanielHenryGutierrezCelis/" target="_blank">Gerardo Daniel Henry Gutierrez Celis</a></p>
                     <p><a href="https://julioiluj.github.io/githubpageJulioEduardoPinoCharun/" target="_blank">Julio Eduardo Pino Charun</a></p>
                 </div>
                 <div class="courses-card">
@@ -131,20 +131,20 @@
                     <p>Luis Díaz Basurco</p>
                     <h3>Compañeros destacados</h3>
                     <p><a href="https://rodrigovelasquezb.github.io/Rodrigo-Velasquez-Bonilla/" target="_blank">Rodrigo Andre Velasquez Bonilla</a></p>
-                    <p>Edmundo Fransua Nuñez Choque</p>
+                    <p><a href="https://guns.lol/the_dereck" target="_blank">Edmundo Fransua Nuñez Choque</a></p>
                 </div>
                 <div class="courses-card">
                     <h2>Introducción a la Filosofía </h2>
                     <p>Henry Huamán Navarro</p>
                     <h3>Compañeros destacados</h3>
-                    <p>Daniel Eduardo Castillo Mayta</p>
+                    <p><a href="https://danieleduardocastillomayta.github.io/Pagina-web/" target="_blank">Daniel Eduardo Castillo Mayta</a></p>
                     <p><a href="https://alissonsalinasalvarez.github.io/" target="_blank"> Alisson Paola Salinas Alvarez</a></p>
                 </div>
                 <div class="courses-card">
                     <h2>Introducción de Ciencia de la Computación</h2>
                     <p>Ernesto Cuadros Vargas</p>
                     <h3>Compañeros destacados</h3>
-                    <p>Dhaymar Christian Aroni Mamani</p>
+                    <p><a href="https://boretd.github.io/githubpage/" target="_blank">Dhaymar Christian Aroni Mamani</a></p>
                     <p>Carlos Wiliam Uracahua Valenzuela</p>
                 </div>
                 <div class="courses-card">
@@ -159,7 +159,7 @@
                     <p>Julissa Villanueva Llerena</p>
                     <h3>Compañeros destacados</h3>
                     <p><a href="https://rodrigovelasquezb.github.io/Rodrigo-Velasquez-Bonilla/" target="_blank">Rodrigo Andre Velasquez Bonilla</a></p>
-                    <p>Daniel Eduardo Castillo Mayta</p>
+                    <p><a href="https://danieleduardocastillomayta.github.io/Pagina-web/" target="_blank">Daniel Eduardo Castillo Mayta</a></p>
                 </div>
             </div>
         </section>
